--- a/Africa/africa.html
+++ b/Africa/africa.html
@@ -66,7 +66,7 @@
       <h4 class="d-flex justify-content-center">Founded in South Africa</h4>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>General</h2>
             <p>Freedom Day is a public holiday in South Africa celebrated on 27 April. It commemorates the first post-apartheid elections held on that day in 1994 and the day on which the new constitution was introduced. The elections were the first national elections where everyone of voting age of over 18 from any race group, was allowed to vote.</p>
@@ -74,7 +74,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>History</h2>
             <p>In 1948, the newly elected National Party government in South Africa began to institute apartheid, an institutionalized system of racial segregation that placed sociopolitical dominance in the hands of the European-descended white minority. Under the Population Registration Act, 1950, all South Africans were categorised by the government as White, Black, Coloured (mixed) or Indian. Suffrage was reserved for Whites, interracial sexual relationships were forbidden and over 80% of the country's land was reserved for the white majority. Members of the Black majority were stripped of citizenship under the Bantu Homelands Citizenship Act, 1970, and were instead made citizens of one of the country's "bantustans", territories reserved for various black ethnic groups. The South African government faced international condemnation against the backdrop of the decolonisation of Africa, and by the 1980s, the state was struggling with major internal political violence, a war of independence in Namibia and intervention in Angola and a failing economy burdened by international sanctions and the heavy costs of national security, effectively forcing the government to move towards political reform.</p>
@@ -82,7 +82,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>Activites</h2>
           <h4>How to celebrate</h4>
