--- a/Brazil/brazil.html
+++ b/Brazil/brazil.html
@@ -66,14 +66,14 @@
       <h4 class="d-flex justify-content-center">Founded in Brazil</h4>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>General</h2>
             <p>All Souls' Day, also called The Commemoration of All the Faithful Departed, is a day of prayer and remembrance for the faithful departed, observed by Christians on 2 November. In Western Christianity, including Roman Catholicism and certain parts of Lutheranism and Anglicanism, All Souls' Day is the third day of Allhallowtide, after All Saints' Day (1 November) and All Hallows' Eve (31 October). Before the standardization of Western Christian observance on 2 November by St. Odilo of Cluny in the 10th century, many Roman Catholic congregations celebrated All Souls' Day on various dates during the Easter season as it is still observed in the Eastern Orthodox Church, the Eastern Catholic churches and the Eastern Lutheran churches. Churches of the East Syriac Rite (Assyrian Church of the East, Ancient Church of the East, Syro-Malabar Catholic Church, Chaldean Catholic Church) commemorate all the faithful departed on the Friday before Lent.</p>
             <p>As with other days of the Allhallowtide season, popular practices for All Souls Day include attending Mass offered for the souls of the faithful departed, as well as Christian families visiting graveyards in order to pray and decorate their family graves with garlands, flowers, candles and incense. Given that many Christian cemeteries are interdenominational in nature, All Souls Day observances often have an ecumenical dimension, with believers from various Christian denominations praying together and cooperating to adorn graves.</p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>History</h2>
             <p>In the Catholic Church, "the faithful" refers essentially to baptized Catholics; "all souls" commemorates the church penitent of souls in purgatory, whereas "all saints" commemorates the church triumphant of saints in heaven. In the liturgical books of the Latin Church it is called the Commemoration of All the Faithful Departed (Latin: Commemoratio omnium fidelium defunctorum). The Catholic Church teaches that the purification of the souls in purgatory can be assisted by the actions of the faithful on earth. Its teaching is based also on the practice of prayer for the dead mentioned as far back as 2 Maccabees 12:42-46. The theological basis for the feast is the doctrine that the souls which, on departing from the body, are not perfectly cleansed from venial sins, or have not fully atoned for past transgressions, are debarred from the Beatific vision, and that the faithful on earth can help them by prayers, alms, deeds, and especially by the sacrifice of the Holy Mass. In the Lutheranism, "the whole people of God in Christ Jesus" are seen as saints and All Souls Day commemorates those believers who have died as the 'faithful departed'. The United Protestant tradition emphasizes "the Christian belief in bodily resurrection and eternal life" in observances of All Souls Day.</p>
@@ -81,7 +81,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>Activites</h2>
             <p>On All Souls Day, Christians of various denominational backgrounds, including Catholics, Lutherans, Anglicans and Methodists, among others, often help one another clean the graves of cemeteries, along with adorning them with flowers. The General Secretary of the Church of North India described the ecumenism present in All Souls Day, stating that "This coming together shows Christian unity". With respect to the economy, vendors "sell flowers, candles and incense sticks" to those visiting the graveyards, who are Christians of the Catholic and Protestant traditions. Prayer services with representatives from different Christian denomination for All Souls Day are held at graveyards for those visiting them. All Souls Day emphasizes "the Christian belief in bodily resurrection and eternal life". Some All Souls' Day traditions are associated with the doctrine of the poor souls of purgatory (in Roman Catholicism) or the intermediate state (in Protestantism and Orthodoxy). Bell tolling is done in honour of the dead. Lighting candles serves variously to kindle a light for the poor souls, honour the dead, as well as to ward off demons. Soul cakes are given to children going souling—going from door to door to pray for the dead (cf. trick-or-treating, Pão-por-Deus).</p>
