--- a/DR/dominican-republic.html
+++ b/DR/dominican-republic.html
@@ -66,7 +66,7 @@
       <h4 class="d-flex justify-content-center">Founded in Dominican Republic</h4>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>General</h2>
             <p>Independance Day in the Dominican Republic is the anniversary to the Dominican War of Independence (Spanish: Guerra de Independencia Dominicana) was a war of independence that began when the Dominican Republic declared independence from the Republic of Haiti on February 27, 1844 and ended on January 24, 1856.</p>
@@ -74,7 +74,7 @@
             <p>The First Dominican Republic was proclaimed at the Puerta de la Misericordia after the blunderbluss shot by the patrician Matías Ramón Mella in the early morning of February 27, 1844 and by the raising of the tricolor flag at the Puerta del Conde by the patrician Francisco del Rosario Sánchez, both inspired by the ideals of their leader, Juan Pablo Duarte, ending the 22 years of Haitian rule.</p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>History</h2>
             <p>On March 7, 1844, Haiti's President Hérard ordered a blockade of Dominican ports. Three columns of Haitian troops, totaling 30,000 men, were dispatched on the 10th: one toward Las Caobas under Hérard's command, another towards Neiba, and a third to Santiago and Puerto Plata. General Santana led his cowboys westward. Skirmishes followed, with Haitian forces winning most but suffering higher casualties. The Dominicans fought with stones, knives, machetes, lances, clubs, and rifles. After Santana's victory at the Battle of Azua on March 19, he retreated, allowing Hérard's forces to occupy Azua. The Dominicans shifted their military operations to the Ocoa River and the valleys of Baní, where their cavalry and lancers could effectively operate. This hindered the Haitian advance beyond Azua. The Haitians sustained casualties in their attempts to advance through mountain passes and were repelled. In the north, heavily outnumbered Dominican troops, under the command of General José María Imbert, defeated Haitian troops led by General Jean-Louis Pierrot at the Battle of Santiago on March 30, thanks to a warning of the pending attack by an Englishman, Stanley Theodore Heneken.
@@ -82,7 +82,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>Activites</h2>
             <p>For the activites of this holiday, theyb ar pretty minor, but what would happen is that most towns will send their representatives to La Vega around Independence Day to march in the parade, dressed in a variety of costumes from around the country. Carnival in the Dominican Republic is an event in which everyone participates in and prepares for.</p>
