--- a/Italy/italy.html
+++ b/Italy/italy.html
@@ -16,41 +16,49 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <nav class="navbar navbar-expand fixed-top bg-body-tertiary">
+    <div class="collapse" id="navbarToggleExternalContent">
+      <div class="bg-body-tertiary p-4">
         <div class="container-fluid">
           <a class="navbar-brand active text-light" href="/index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link text-light" href="/About.html">About Us</a>
               </li>
-              <li class="nav-item text-white text-light">
+              <li class="nav-item text-white">
                 <a class="nav-link text-light" href="/contact.html">Contact</a>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Holiday's
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
-                      <li><a class="dropdown-item" href="../DR/dominican-republic.html">Independence Day</a></li>
-                      <li><a class="dropdown-item" href="../Brazil/brazil.html">All Souls' Day</a></li>
-                      <li><a class="dropdown-item" href="../Russia/russia.html">Victory Day</a></li>
-                      <li><a class="dropdown-item" href="../Africa/africa.html">Freedom Day</a></li>
-                      <li><a class="dropdown-item" href="../Italy/italy.html">Festa della Liberazione Day</a></li>
-                      <li><a class="dropdown-item" href="../Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
-                      <li><a class="dropdown-item" href="../austrailia/australia.html">Australia Day</a></li>
-                      <li><a class="dropdown-item" href="../japan/japan.html">labor Thanksgiving Day</a></li>
-                    </ul>
-                  </li>
+                  <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Holiday's
+                  </a>
+                  <ul class="dropdown-menu cool">
+                    <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
+                    <li><a class="dropdown-item" href="../DR/dominican-republic.html">Independence Day</a></li>
+                    <li><a class="dropdown-item" href="../Brazil/brazil.html">All Souls' Day</a></li>
+                    <li><a class="dropdown-item" href="../Russia/russia.html">Victory Day</a></li>
+                    <li><a class="dropdown-item" href="../Africa/africa.html">Freedom Day</a></li>
+                    <li><a class="dropdown-item" href="../Italy/italy.html">Festa della Liberazione Day</a></li>
+                    <li><a class="dropdown-item" href="../Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
+                    <li><a class="dropdown-item" href="../austrailia/australia.html">Australia Day</a></li>
+                    <li><a class="dropdown-item" href="../japan/japan.html">labor Thanksgiving Day</a></li>
+                  </ul>
+                </li>
               </li>
             </ul>
           </div>
         </div>
-      </nav>
+      </div>
+    </div>
+    <nav class="navbar navbar-dark bg-body-tertiary">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
 </header>
 <main>
     <h1 class="sofia-regular d-flex justify-content-center">Festa della Liberazione</h1>
@@ -58,13 +66,13 @@
       <h4 class="d-flex justify-content-center">Founded in Italy</h4>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>General</h2>
             <p>Liberation Day (Italian: Festa della Liberazione ['fɛsta della liberat'tsjo:ne]), also known as the Anniversary of Italy's Liberation (Anniversario della liberazione d'Italia), Anniversary of the Resistance (Anniversario della Resistenza), or simply 25 April (25 aprile [ˌventi'tʃiŋkwe a'pri:le]), is a national holiday in Italy that commemorates the victory of the Italian resistance movement against Nazi Germany and the Italian Social Republic, puppet state of the Nazis and rump state of the fascists, culmination of the liberation of Italy from German occupation and of the Italian civil war in the latter phase of World War II. That is distinct from Republic Day (Festa della Repubblica), which takes place on 2 June and commemorates the 1946 Italian institutional referendum.</p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>History</h2>
             <p>The war ends in Italy on 2 May 1945, with the complete surrender of German and RSI forces to the Allied forces, as formally established during the so-called Surrender at Caserta on 29 April 1945, marks the definitive defeat of Nazism and Fascism in Italy. By 1st May, all of northern Italy was liberated from occupation, including Bologna (21 April), Genoa (23 April), Milan (25 April), Turin and Venice (28 April). The liberation put an end to two and a half years of German occupation, five years of war, and twenty-three years of fascist dictatorship. The aftermath of World War II left Italy bitter toward the monarchy for endorsing the Fascist regime for over 20-plus years. These frustrations contributed to a revival of the Italian republican movement. The liberation symbolically represents the beginning of the historical journey which led to the referendum of 2 June 1946, when Italians opted for the end of the monarchy and the creation of the Italian Republic. This was followed by the adoption of the 1948 Constitution of the Republic, created by the Constituent Assembly and representatives from the anti-fascist forces that defeated the Nazis and the Fascists during the liberation of Italy and the Italian civil war.</p>
@@ -72,7 +80,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>Activites</h2>
             <p>Public events in commemoration of the event, such as marches and parades, have been organized annually in various Italian cities, especially in those decorated with military valor for the war of liberation. Among the events of the festival program there is the solemn homage, by the President of Italy and other important officers of the State, to the chapel of the Italian Unknown Soldier (Milite Ignoto), buried in the Altare della Patria in Rome, with the deposition of a laurel wreath in memory of the fallen and missing Italians in wars. On this day, the Italian flag and the European flag are displayed on all buildings that house public offices and institutions.</p>
