--- a/Pakistan/pakistan.html
+++ b/Pakistan/pakistan.html
@@ -66,13 +66,13 @@
       <h4 class="d-flex justify-content-center">Founded in Pakistan</h4>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>General</h2>
             <p>Jinnah's birthday, officially Quaid-e-Azam Day and sometimes known as Quaid Day, is a public holiday in Pakistan observed annually on 25 December to celebrate the birthday of the founder of Pakistan, Muhammad Ali Jinnah, known as Quaid-i-Azam ("Great Leader"). A major holiday, commemorations for Jinnah began during his lifetime in 1942, and have continued ever since. The event is primarily observed by the government and the citizens of the country where the national flag is hoisted at major architectural structures such as private and public buildings, particularly at the top of Quaid-e-Azam House in Karachi.</p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>History</h2>
             <p>Muhammad Ali Jinnah (1876–1948) was the founder and first governor-general of Pakistan. He is among the most revered leaders in the country's history, and often referred to as Qaid-e-Azam, meaning "Great Leader". In 1942, numerous events commemorated Jinnah on his birthday, 25 December: the All-India Muslim League organised a fund for the poor and Liaquat Ali Khan held a reception for the leader. At the Wellington Pavilion in Delhi, Muslim citizens also held a reception for Jinnah. From then on, numerous events were held yearly on 25 December to honour Jinnah during his lifetime; this included receptions, parades, commemorations, speeches and recognition from other world leaders.</p>
@@ -80,7 +80,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>Activites</h2>
             <p>A major holiday in Pakistan, it is celebrated conventionally across the country. Since 25 December is coincidentally also Christmas, Pakistani citizens observe both holidays on 25 December.</p>
