--- a/Russia/russia.html
+++ b/Russia/russia.html
@@ -66,7 +66,7 @@
       <h4 class="d-flex justify-content-center">Founded in Russia</h4>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>General</h2>
             <p>Victory Day is a holiday that commemorates the victory of the Soviet Union over Nazi Germany in 1945. It was first inaugurated in the 15 republics of the Soviet Union following the signing of the German Instrument of Surrender late in the evening on 8 May 1945 (9 May Moscow Time). The Soviet government announced the victory early on 9 May after the signing ceremony in Berlin. Although the official inauguration occurred in 1945, the holiday became a non-labor day only in 1965. In East Germany, 8 May was observed as Liberation Day from 1950 to 1966, and was celebrated again on the 40th anniversary in 1985. In 1967, a Soviet-style "Victory Day" was celebrated on 8 May. Since 2002, the German state of Mecklenburg-Vorpommern has observed a commemoration day known as the Day of Liberation from National Socialism, and the End of the Second World War.</p>
@@ -74,7 +74,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>History</h2>
             <p>The German Instrument of Surrender was signed twice. An initial document was signed in Reims on 7 May 1945 by Alfred Jodl (chief of staff of the German OKW) for Germany, Walter Bedell Smith, on behalf of the Supreme Commander of the Allied Expeditionary Force, and Ivan Susloparov, on behalf of the Soviet High Command, in the presence of French Major-General François Sevez as the official witness. Since the Soviet High Command had not agreed to the text of the surrender, and because Susloparov, a relatively low-ranking officer, was not authorized to sign this document, the Soviet Union requested that a second, revised, instrument of surrender be signed in Berlin. Joseph Stalin declared that the Soviet Union considered the Reims surrender a preliminary document, and Dwight D. Eisenhower immediately agreed with that. Another argument was that some German troops considered the Reims instrument of surrender as a surrender to the Western Allies only, and fighting continued in the East, especially in Prague.</p>
@@ -82,7 +82,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>Activites</h2>
             <p>During the Soviet Union's existence, 9 May was celebrated throughout it and in the Eastern Bloc. Though the holiday was introduced in many Soviet republics between 1946 and 1950, it became a non-working day only in the Ukrainian SSR in 1963 and the Russian SFSR in 1965. In the Russian SFSR, a weekday off (usually a Monday) was given if 9 May fell on a Saturday or Sunday. The celebration of Victory Day continued during subsequent years. The war became a topic of great importance in cinema, literature, history lessons at school, the mass media, and the arts. The ritual of the celebration gradually obtained a distinctive character with a number of similar elements: ceremonial meetings, speeches, lectures, receptions and fireworks. In Russia during the 1990s, the 9 May holiday was not celebrated with large Soviet-style mass demonstrations due to the policies of successive Russian governments. Following Vladimir Putin's rise to power, the Russian government began promoting the prestige of the governing regime and history, and national holidays and commemorations became a source of national self-esteem.</p>
