--- a/austrailia/australia.html
+++ b/austrailia/australia.html
@@ -66,13 +66,13 @@
       <h4 class="d-flex justify-content-center">Founded in Australia</h4>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>General</h2>
             <p>Australia Day is the official national day of Australia. Observed annually on 26 January, it marks the 1788 landing of the First Fleet and raising of the Union Flag of Great Britain by Arthur Phillip at Sydney Cove, a small bay on the southern shore of Sydney Harbour. In the present, the government Australia Day Council organises events that seek to recognise the contributions of Australians to the nation, while also encouraging reflection on past wrongs including towards Indigenous Australians and also giving respect and celebrating the diversity and achievements of Australian society past and present. The presentation of community awards and citizenship ceremonies are also commonly held on the day. The holiday is marked by the presentation of the Australian of the Year Awards on Australia Day Eve, announcement of the Australia Day Honours list and addresses from the governor-general and prime minister. It is an official public holiday in every state and territory. With community festivals, concerts and citizenship ceremonies, the day is celebrated in large and small communities and cities around the nation. Australia Day has become the biggest annual civic event in Australia.</p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>History</h2>
             <p>On 13 May 1787 a fleet of 11 ships, which came to be known as the First Fleet, was sent by the British Admiralty from England to New Holland. Under the command of Naval Captain Arthur Phillip, the fleet sought to establish a penal colony at Botany Bay on the coast of New South Wales, which had been explored and claimed by Lieutenant James Cook in 1770. The settlement was seen as necessary because of the loss of the Thirteen Colonies in North America. The Fleet arrived between 18 and 20 January 1788, but it was immediately apparent that Botany Bay was unsuitable. On 21 January, Phillip and a few officers travelled to Port Jackson, 12 kilometres (7.5 mi) to the north, to see if it would be a better location for a settlement. They stayed there until 23 January; Phillip named the site of their landing Sydney Cove, after the Home Secretary, Thomas Townshend, 1st Viscount Sydney. They also made contact with the local Aboriginal people.</p>
@@ -80,7 +80,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>Activites</h2>
             <p>The various celebrations and civic ceremonies such as citizenship ceremonies, the Australian of the Year awards and the Australia Day Honours (introduced in 1975) started being performed on Australia Day from around the 1950s. After 1988, participation in Australia Day increased, and in 1994 all states and territories began to celebrate a unified public holiday on 26 January - regardless of the day of the week - for the first time.</p>
