--- a/japan/japan.html
+++ b/japan/japan.html
@@ -66,13 +66,13 @@
       <h4 class="d-flex justify-content-center">Founded in Japan</h4>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>General</h2>
             <p>Labor Thanksgiving Day (勤労感謝の日, Kinrō Kansha no Hi) is an annual public holiday in Japan celebrated on November 23 of each year, unless that day falls on a Sunday, in which case the holiday is moved to Monday. The law establishing the holiday cites it as an occasion to respect labor, to celebrate production, and for citizens to give each other thanks.</p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>History</h2>
             <p>Labor Thanksgiving Day is the modern name for an ancient harvest festival known as Niiname-sai (新嘗祭, also read as Shinjō-sai), celebrating the harvest of the Five Cereals. The classical chronicle the Nihon Shoki mentions a harvest ritual having taken place during the reign of the legendary Emperor Jimmu (660-585 BC), as well as more formalized harvest celebrations during the reign of Emperor Seinei (480-484 AD). Modern scholars can date the basic forms of niiname-sai to the time of Emperor Tenmu (667-686 AD). Traditionally, it celebrated the year's hard work; during the Niiname-sai ceremony, the Emperor would dedicate the year's harvest to kami (spirits), and taste the rice for the first time. The festival was held on the second Day of the Rabbit in the 11th month of each year under the lunar calendar, and was fixed at November 23 when Japan adopted the Gregorian calendar in 1873.</p>
@@ -80,7 +80,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>Activites</h2>
             <p>On this day, school children prepare cards or gifts to distribute to police officers, firefighters, hospital staffs, personnel of the Japan Self-Defense Force and the Japan Coast Guard and other people in the labor sector to show appreciation for their contributions to the country. Companies review their accomplishments and congratulate their workers for their dedication. Families get together and have dinner at home on this holiday. In addition, individuals themselves are encouraged to relax and take care of themselves. Niiname Festival at Hikosan Jingu Hoheiden, November 23, 2015. The traditional Niiname-sai festival is still held privately by the Imperial House of Japan on Labor Thanksgiving Day. It is considered one of the most significant annual rituals by the Emperor, requiring rites to be conducted from 6 PM to 8 PM and from 11 PM to 1 AM in the presence of only two servants. Due to the physical requirements of the rites, Emperor Hirohito ceased participation at age 70 and Emperor Akihito shortened his participation in stages from age 75 to age 80. The festival is also celebrated publicly at some Shinto shrines such as Sumiyoshi Taisha in Osaka.</p>
