--- a/About.html
+++ b/About.html
@@ -26,13 +26,13 @@
           <div class="" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-light" href="/About.html">About Us</a>
+                <a class="nav-link text-light" href="/About.html"><i class="bi bi-person-fill"></i>About Us</a>
               </li>
               <li class="nav-item text-white">
-                <a class="nav-link text-light" href="/contact.html">Contact</a>
+                <a class="nav-link text-light" href="/contact.html"><i class="bi bi-person-lines-fill"></i>Contact</a>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Holiday's
+                    <i class="bi bi-globe2"></i>Holiday's
                   </a>
                   <ul class="dropdown-menu cool">
                     <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
@@ -63,7 +63,8 @@
 <main>
 <h1 class="d-flex d-flexa justify-content-center">About Us:</h1>
   <h4 class="d-flex d-flexa justify-content-center">We are an organization made to teach people about any information they'd like to know aboiut the world since we know not all people have the chance to expirience the beauty of this world in person</h4>
-  <h6 class="d-flex d-flexa justify-content-center">The kind people at "<em>CarribeanKing.Co</em>" have help us start our project and help our kickstarter so we have sponsered them for the organization thanks!!!</h6>
+  <h6 class="d-flex d-flexa justify-content-center">The kind people at "
+    CarribeanKing.Co" have help us start our project and help our kickstarter so we have sponsered them for the organization thanks!!!</h6>
   <hr>
   <h1>About Justin.inc:</h1>
   <div class="row">
@@ -71,7 +72,7 @@
       <h3>My company started all the way back in 2016 when I was a wee-lad, I was fond of learning and loved education, but as I'd look around me, people hated to learn anything. I was never able to understand why they did, regardless of the fact, I met up with someone from school in 2022, as I had witness what they had done with their life, I realized all that not paying attention has left him a smelly, poor bum with a job as a garbage man. I never hoped this would happened to anyone I knew, but sadly, that was only a dream, and this dream inspired me to have a new one. That dream was to make sure everyone one is able to get education they need and not end up a bum in life, this is the reason I've worked my ass off for this company.</h3>
       <br><br>
     </div>
-    <div class="col">
+    <div class="col bread">
       <h2>Thebreadman.corp</h2>
       <iframe width="960" height="415" src="https://www.youtube.com/embed/8V06BwkjwPw?si=8gKxrDjqpPPPP1zz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
@@ -84,7 +85,7 @@
       <h3>Eric Foster:</h3>
       <div class="d-flex justify-content-between">
         <a href="https://www.linkedin.com/in/ericfoster9"><img src="Images/unnamed.png" width="300px"></a>
-        <detail class="foster"><h5>Eric is my technology person as well as a passionate and creative educator! He finds unique ways to bring fun and playfulness into the classroom, helping to make technical topics approachable, engaging and exciting for new students. Eric is not only interested helping others learn, but he is also an active learner himself. While working with Eric, he actively sought out opportunities for feedback and personal development so that he could improve his teaching skills. Eric also displayed a knack for curriculum writing, creating his own exercises and finding engaging ways to use technology in the classroom. Overall, Eric is curious, creative, and kind - very lucky to have worked with him!</h5></detail>
+        <h5>Eric is my technology person as well as a passionate and creative educator! He finds unique ways to bring fun and playfulness into the classroom, helping to make technical topics approachable, engaging and exciting for new students. Eric is not only interested helping others learn, but he is also an active learner himself. While working with Eric, he actively sought out opportunities for feedback and personal development so that he could improve his teaching skills. Eric also displayed a knack for curriculum writing, creating his own exercises and finding engaging ways to use technology in the classroom. Overall, Eric is curious, creative, and kind - very lucky to have worked with him!</h5>
         </div>
     </div>
     <div class="col">
