--- a/canada/canada.html
+++ b/canada/canada.html
@@ -65,14 +65,14 @@
       <h4 class="d-flex justify-content-center">Founded in Canada</h4>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>General</h2>
             <p>Canada Day, formerly known as Dominion Day, is the national day of Canada. A federal statutory holiday, it celebrates the anniversary of Canadian Confederation which occurred on July 1, 1867, with the passing of the British North America Act, 1867, when the three separate colonies of the United Canadas, Nova Scotia, and New Brunswick were united into a single dominion within the British Empire called Canada.</p>
             <p>Originally called Dominion Day, the holiday was renamed in 1982, the same year that the Canadian constitution was patriated by the Canada Act, 1982, which severed the vestiges of legal dependence on the Parliament of the United Kingdom. Canada Day celebrations take place throughout the country, as well as in various locations around the world attended by Canadians living abroad.</p>
           </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>History</h2>
             <p>The enactment of the British North America Act, 1867 (today called the Constitution Act, 1867), which confederated Canada, was celebrated on July 1, 1867, with the ringing of the bells at the Cathedral Church of St James in Toronto and "bonfires, fireworks, and illuminations, excursions, military displays, and musical and other entertainments", as described in contemporary accounts. On June 20 of the following year, Governor General the Viscount Monck issued a royal proclamation asking for Canadians to celebrate the anniversary of Confederation, However, the holiday was not established statutorily until May 15, 1879, when it was designated as Dominion Day, alluding to the reference in the British North America Act to the country as a dominion. The holiday was initially not dominant in the national calendar; any celebrations were mounted by local communities and the governor general hosted a party at Rideau Hall. No larger celebrations were held until 1917, and then none again for a further decade—the gold and diamond anniversaries of Confederation, respectively.
@@ -80,7 +80,7 @@
             </p>
         </section>
       </div>
-      <div class="col">
+      <div class="col work">
         <section>
           <h2>Activites</h2>
             <p>Most communities across the country host organized celebrations for Canada Day, typically outdoor public events, such as parades, carnivals, festivals, barbecues, air and maritime shows, fireworks, and free musical concerts, as well as citizenship ceremonies. There is no standard mode of celebration for Canada Day; Jennifer Welsh, a professor of International Relations at the University of Oxford, said about this: "Canada Day, like the country, is endlessly decentralized. There doesn't seem to be a central recipe for how to celebrate it—chalk it up to the nature of the federation."</p>
