--- a/contact.html
+++ b/contact.html
@@ -27,13 +27,13 @@
           <div class="" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-light" href="/About.html">About Us</a>
+                <a class="nav-link text-light" href="/About.html"><i class="bi bi-person-fill"></i>About Us</a>
               </li>
               <li class="nav-item text-white">
-                <a class="nav-link text-light" href="/contact.html">Contact</a>
+                <a class="nav-link text-light" href="/contact.html"><i class="bi bi-person-lines-fill"></i>Contact</a>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Holiday's
+                    <i class="bi bi-globe2"></i>Holiday's
                   </a>
                   <ul class="dropdown-menu cool">
                     <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
