--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-body-tertiary p-4">
         <div class="container-fluid">
-          <a class="navbar-brand active text-light" href="index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
+          <a class="navbar-brand active text-light" href="/index.html"><i class="bi bi-house-door-fill"></i>World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-light" href="About.html">About Us</a>
+                <a class="nav-link text-light" href="/About.html"><i class="bi bi-person-fill"></i>About Us</a>
               </li>
               <li class="nav-item text-white">
-                <a class="nav-link text-light" href="contact.html">Contact</a>
+                <a class="nav-link text-light" href="/contact.html"><i class="bi bi-person-lines-fill"></i>Contact</a>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Holiday's
+                    <i class="bi bi-globe2"></i>Holiday's
                   </a>
                   <ul class="dropdown-menu cool">
                     <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
