--- a/Africa/africa.html
+++ b/Africa/africa.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-  <header>
+    <header>
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-body-tertiary p-4">
         <div class="container-fluid">
@@ -26,13 +26,13 @@
           <div class="" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link text-light" href="/About.html">About Us</a>
+                <a class="nav-link text-light" href="/About.html"><i class="bi bi-person-fill"></i>About Us</a>
               </li>
               <li class="nav-item text-white">
-                <a class="nav-link text-light" href="/contact.html">Contact</a>
+                <a class="nav-link text-light" href="/contact.html"><i class="bi bi-person-lines-fill"></i>Contact</a>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Holiday's
+                    <i class="bi bi-globe2"></i>Holiday's
                   </a>
                   <ul class="dropdown-menu cool">
                     <li><a class="dropdown-item" href="../canada/canada.html">Canada Day</a></li>
