--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link text-light" href="/About.html"><i class="bi bi-person-fill"></i>About Us</a>
               </li>
               <li class="nav-item text-white">
-                <a class="nav-link text-light" href="/contact.html"><i class="bi bi-person-lines-fill"></i>Contact</a>
+                <a class="nav-link text-light" href="/contact.html"><i class="bi bi-inbox-fill"></i>Contact</a>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-globe2"></i>Holiday's
