--- a/About.html
+++ b/About.html
@@ -72,9 +72,9 @@
       <h3>My company started all the way back in 2016 when I was a wee-lad, I was fond of learning and loved education, but as I'd look around me, people hated to learn anything. I was never able to understand why they did, regardless of the fact, I met up with someone from school in 2022, as I had witness what they had done with their life, I realized all that not paying attention has left him a smelly, poor bum with a job as a garbage man. I never hoped this would happened to anyone I knew, but sadly, that was only a dream, and this dream inspired me to have a new one. That dream was to make sure everyone one is able to get education they need and not end up a bum in life, this is the reason I've worked my ass off for this company.</h3>
       <br><br>
     </div>
-    <div class="col bread">
+    <div class="col">
       <h2>Thebreadman.corp</h2>
-      <iframe width="960" height="415" src="https://www.youtube.com/embed/8V06BwkjwPw?si=8gKxrDjqpPPPP1zz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe class="bread" src="https://www.youtube.com/embed/8V06BwkjwPw?si=8gKxrDjqpPPPP1zz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     
@@ -84,8 +84,8 @@
       <h1>People that have helped me in my company:</h1>
       <h3>Eric Foster:</h3>
       <div class="d-flex justify-content-between">
-        <a href="https://www.linkedin.com/in/ericfoster9"><img src="Images/unnamed.png" width="300px"></a>
-        <h5>Eric is my technology person as well as a passionate and creative educator! He finds unique ways to bring fun and playfulness into the classroom, helping to make technical topics approachable, engaging and exciting for new students. Eric is not only interested helping others learn, but he is also an active learner himself. While working with Eric, he actively sought out opportunities for feedback and personal development so that he could improve his teaching skills. Eric also displayed a knack for curriculum writing, creating his own exercises and finding engaging ways to use technology in the classroom. Overall, Eric is curious, creative, and kind - very lucky to have worked with him!</h5>
+        <a href="https://www.linkedin.com/in/ericfoster9"><img src="Images/foster.png" width="300px"></a>
+        <h5 class="work">Eric is my technology person as well as a passionate and creative educator! He finds unique ways to bring fun and playfulness into the classroom, helping to make technical topics approachable, engaging and exciting for new students. Eric is not only interested helping others learn, but he is also an active learner himself. While working with Eric, he actively sought out opportunities for feedback and personal development so that he could improve his teaching skills. Eric also displayed a knack for curriculum writing, creating his own exercises and finding engaging ways to use technology in the classroom. Overall, Eric is curious, creative, and kind - very lucky to have worked with him!</h5>
         </div>
     </div>
     <div class="col">
